# iris_insee_utils_data

./: .gitignore  README.md  pyproject.toml
data/raw/other_data/insee_data/: source_info.txt
src/iris_insee_utils_data/: __init__.py  raw_to_parquet.py
